--- a/rebita_op2.html
+++ b/rebita_op2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebAR</title>
-    <p>壁モデリング Option1_OBJ</p>
+    <p>OP2</p>
     <p>右下のボタンをタップするとARモードに切り替わります。</p>
     <script
         type="module"
@@ -27,8 +27,8 @@
   </head>
   <body>
       <model-viewer 
-        src="rebita/OP2.glb" 
-        ios-src="rebita/OP2.usdz" 
+        src="rebita/OP2/OP2.glb" 
+        ios-src="rebita/OP2/OP2.usdz" 
         ar 
         ar-modes="webxr scene-viewer quick-look"
         ar-scale="auto" 
